syntax = "proto3";


package User.Info;
option go_package = "github.com/hetao29/go-grpc/proto/user/info";
import "common/type.proto";
import "google/api/annotations.proto";

// The greeter service definition.
service Info{
	// Sends a greeting
	rpc login(LoginRequest) returns (LoginResponse) {
		option (google.api.http) = { 
			post: "/User/Info/Login" 
			body: "*"
		};
	}
	rpc logout(LogoutRequest) returns (LogoutResponse) {
		option (google.api.http) = { 
			post: "/User/Info/Logout" 
			body: "*"
		};
	}
}

message LoginRequest{
	common.Error error=1;
	string name = 2;
	string password = 3;
	string verify_code= 4;
}
message UserInfo{
	int64 Uid=1;
	string Name=2;
}
message LoginResponse{
	common.Error error=1;
	UserInfo info=2;
}

message LogoutRequest{
	common.Error error=1;
	string name = 2;
	string token = 3;
}
message LogoutResponse{
	common.Error error=1;
}
